# Proyecto-1-SO-ThreadCity

./: Cargo.toml
src/: gui.rs  lib.rs  main.rs
src/mypthreads/: mod.rs  mutex.rs  thread.rs
src/scheduler/: lottery.rs  mod.rs  rr.rs  rt.rs  util.rs
src/threadcity/: city.rs  entities.rs  mod.rs
