[package]
name = "Proyecto-1-SO-ThreadCity"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
rand = "0.8"
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
glib = "0.19"
gio = "0.19"
gdk-pixbuf = "0.20"
gdk4 = "0.9"


[lib]
name = "proyecto1"
path = "src/lib.rs"
